fix: minor fixes in oas generation
